--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
   </div>
 
   <!-- Music -->
-  <audio controls autoplay loop>
+  <audio controls autoplay loop muted>
     <source src="The Birthday .mp3" type="audio/mp4">
     Your browser does not support the audio element.
   </audio>
